<resources>
    <string name="app_name">Analytics.gg</string>
    <string name="top">Top</string>
    <string name="jungle">Jungle</string>
    <string name="mid">Mid</string>
    <string name="carry">Carry</string>
    <string name="support">Support</string>
    <string name="search">Search</string>
    <string name="LoginActivity">LoginContext</string>
    <string name="AppContext">AppContext</string>
    <string name="BaseUrl">https://lolanalyticsv3.appspot.com/_ah/api/myApi/v1/</string>
    <string name="username">Username</string>
    <string name="proceed">Proceed</string>
    <string name="early_game">Early Game</string>
    <string name="mid_game">Mid Game</string>
    <string name="late_game">Late Game</string>
    <string name="details">Details</string>
    <string name="match_performance">Match Performance</string>
    <string name="kills">Kills</string>
    <string name="assists">Assists</string>
    <string name="deaths">Deaths</string>
    <string name="damageDealt">Damage Dealt</string>
    <string name="creeps">Creep Score</string>
    <string name="historical">Historical</string>
    <string name="vs_opponent">Vs Opponent</string>
    <string name="vs_division">Vs Division</string>
</resources>
