<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/chart_summary_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryLight"
            android:layout_height="@dimen/pie_chart_standard_height"
            android:layout_weight="1">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/earlyGameGraph"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pie_chart_standard_height" />
        </RelativeLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/midGameGraph"
            android:layout_width="0dp"
            android:layout_height="@dimen/pie_chart_standard_height"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/lateGameGraph"
            android:layout_width="0dp"
            android:layout_height="@dimen/pie_chart_standard_height"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart_icons_wrapper"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/chart_summary_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/earlyGameTitle"
            android:layout_width="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/early_game" />
        <TextView
            android:id="@+id/midGameTitle"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mid_game"
            android:layout_width="12dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/lateGameTitle"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:layout_width="12dp"
            android:gravity="center"
            android:text="@string/late_game"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>