<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/matchPerformanceTitle"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/match_performance" />

    <RelativeLayout
        android:id="@+id/performanceSummaryHolder"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/matchPerformanceTitle"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="3">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/heroChamp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/khazix"
            app:civ_border="true"
            app:civ_border_color="@color/green" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/performanceScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/enemyChamp"
                android:src="@drawable/shyvanasquare"
                app:civ_border="true"
                android:layout_centerVertical="true"
                app:civ_border_color="@color/red"
                android:layout_margin="12dp"
                android:layout_width="64dp"
                android:layout_alignParentEnd="true"
                android:layout_height="64dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/kdaHolder"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/performanceSummaryHolder"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="3">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/killsScoreTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/kills"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/kills"
                android:layout_below="@+id/killsScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/deathsScoreTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/deaths"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/deaths"
                android:layout_below="@+id/deathsScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/assistsScoreTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/assists"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/assists"
                android:layout_below="@+id/assistsScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/earlyGameHolder"
        android:layout_below="@+id/kdaHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/midGameHolder"
        android:layout_below="@+id/earlyGameHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lateGameHolder"
        android:layout_below="@+id/midGameHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
</RelativeLayout>